WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
210592
MSVC: LayoutUnits.h(248): warning C4245: 'argument': conversion from 'const int' to 'size_t', signed/unsigned mismatch
https://bugs.webkit.org/show_bug.cgi?id=210592
Summary
MSVC: LayoutUnits.h(248): warning C4245: 'argument': conversion from 'const i...
Fujii Hironori
Reported
2020-04-15 23:09:19 PDT
MSVC: LayoutUnits.h(248): warning C4245: 'argument': conversion from 'const int' to 'size_t', signed/unsigned mismatch Since
Bug 210399
(
r259981
)
> C:\Buildbot\WinCairo-EWS\build\Source\WebCore\layout\LayoutUnits.h(248): warning C4245: 'argument': conversion from 'const int' to 'size_t', signed/unsigned mismatch > C:\Buildbot\WinCairo-EWS\build\Source\WebCore\layout\LayoutUnits.h(250): warning C4245: 'argument': conversion from 'const int' to 'size_t', signed/unsigned mismatch > C:\Buildbot\WinCairo-EWS\build\Source\WebCore\layout\LayoutUnits.h(251): warning C4245: 'argument': conversion from 'const int' to 'size_t', signed/unsigned mismatch
Attachments
Patch
(2.48 KB, patch)
2020-04-19 23:53 PDT
,
Fujii Hironori
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Fujii Hironori
Comment 1
2020-04-19 23:53:58 PDT
Created
attachment 396951
[details]
Patch
Fujii Hironori
Comment 2
2020-04-20 13:39:17 PDT
Comment on
attachment 396951
[details]
Patch Clearing flags on attachment: 396951 Committed
r260396
: <
https://trac.webkit.org/changeset/260396
>
Fujii Hironori
Comment 3
2020-04-20 13:39:20 PDT
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 4
2020-04-20 13:49:16 PDT
<
rdar://problem/62074213
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug