MSVC: LayoutUnits.h(248): warning C4245: 'argument': conversion from 'const int' to 'size_t', signed/unsigned mismatch https://bugs.webkit.org/show_bug.cgi?id=210592

Reviewed by Zalan Bujtas.

* layout/LayoutUnits.h:
(WTF::HashTraits<WebCore::Layout::SlotPosition>::emptyValue):
(WTF::HashTraits<WebCore::Layout::SlotPosition>::constructDeletedValue):
(WTF::HashTraits<WebCore::Layout::SlotPosition>::isDeletedValue):
Use std::numeric_limits<size_t>::max() for empty and deleted
values instead of WebCore::intMinForLayoutUnit.

Canonical link: https://commits.webkit.org/223651@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@260396 268f45cc-cd09-0410-ab3c-d52691b4dbfc